minor testing issues checking

--- a/client/src/app/components/add-sales/add-sales.component.html
+++ b/client/src/app/components/add-sales/add-sales.component.html
@@ -5,7 +5,7 @@
   </div>
   <div class="button-row">
     <a mat-flat-button color="primary" [routerLink]="['/']"
-      ><mat-icon>list</mat-icon></a
+      ><mat-icon>list</mat-icon>List</a
     >
   </div>
   <mat-card class="example-card">
