Pie chart color fixed temporarily

--- a/client/src/app/components/sales/sales.component.html
+++ b/client/src/app/components/sales/sales.component.html
@@ -9,7 +9,7 @@
     >
   </div>
   <div class="top-charts">
-    <div class="chart">
+    <div *ngIf="!isLoadingResults" class="chart">
       <canvas
         baseChart
         [data]="pieChartData"
